policybot/deploy/policybot/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: policybot
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - secretName: istio-policybot-certs
  backend:
    serviceName: policybot-server
    servicePort: 8080

# This requires prior creation of sslcerts
# secret
# kubectl create secret tls istio-policybot-certs --key=privkey.pem --cert=cert.pem
